test/corpus/primary.txt
================================================================================
Integer literals
================================================================================

0
0___0
123
0xff
0o70
0b1111111110010000

--------------------------------------------------------------------------------

(source_file
  (number)
  (number)
  (number)
  (number)
  (number)
  (number))

================================================================================
Floating-point literals
================================================================================

123.123
.2
2.
123.0
0.1
12e1
12E1
12.1e1
12.2E1
12.1_2e1
12.2_2E1
12e+1
12e-1
12e+1_2
12e-1_2

--------------------------------------------------------------------------------

(source_file
  (number)
  (number)
  (number)
  (number)
  (number)
  (number)
  (number)
  (number)
  (number)
  (number)
  (number)
  (number)
  (number)
  (number)
  (number)
  (number))

================================================================================
String literals
================================================================================

""
"abc"
"foo\nbar"
"\"foo\""
"/* foo bar */ foo bar"
"foo\x42\x43bar"
"foo \x42  \x43 bar"

--------------------------------------------------------------------------------

(source_file
  (string)
  (string)
  (string)
  (string)
  (string)
  (string)
  (string))

================================================================================
Boolean literals
================================================================================

true
false

--------------------------------------------------------------------------------

(source_file
  (boolean)
  (boolean))
