test/corpus/types.txt
================================================================================
Simple type
================================================================================

2 Byte

--------------------------------------------------------------------------------

(source_file
  (ifactor
    (number)
    (identifier)))
